@@ -71,6 +71,7 @@ Template for new versions:
 - `fastdwarf`: now saves its state with the fort
 - `fastdwarf`: prevent units from teleporting to inaccessible areas when in teledwarf mode
 - `fastdwarf`: allow units to meander and satisfy needs when they have no current job and teledwarf mode is enabled
+- `zone`: add include/only/exclude filter for juveniles to the pasture/pit/cage/restraing assignment screen
 
 ## Documentation
 - `installing`: Add installation instructions for winskin on Mac
